--- a/frontend/alterar_funcionario.html
+++ b/frontend/alterar_funcionario.html
@@ -52,6 +52,10 @@
                 <input type="number" step="any" name="nSalario" id="iSalario" class="form-control" placeholder="Entre com seu Salario" required>
                 <label for="iSalario">Salario</label>
             </div>
+            <div class="form-floating mb-3">
+                <input type="date" name="nDatanascimento" id="iDatanascimento" class="form-control" placeholder="Entre com sua a data de nascimento" required>
+                <label for="iDatanascimento">Datanascimento</label>
+            </div>
 
             <div class="form-group mb-3 text-center">
                 <div id="operacao" class="d-inline">
