--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,6 +53,7 @@
                     <th>Nome</th>
                     <th>Numerodedependentes</th>
                     <th>Salario</th>
+                    <th>Datanascimento</th>
                     <th>Ações</th>
                 </tr>
             </thead>
